@@ -41,7 +41,8 @@ setup(name=name,
           'eea.mediacentre',
           'eea.reports',
       ],
-      entry_points="""
-      # -*- Entry points: -*-
-      """,
+      entry_points= {
+          'console_scripts':[
+            "link_to_maildrop = Products.EEAPloneAdmin.scripts.link_maildrop:link",
+      ]},
       )
