@@ -3,6 +3,7 @@ Changelog
 
 4.13-dev - (unreleased)
 -----------------------
+ * Feature: added script to create a link to maildrop script [tiberich #4804]
  * Bug fix: Added eea rewrite rules JS in order to rewrite some URL as some
    views works only if they are applied to Plone Site
    [voineali #4590]
